# angular-rust-clerk

./: .env.example  .gitignore  README.md  docker-compose.yml  litellm-config.yaml  prd.md  project-intend.md
backend/: .env.example  Cargo.toml  Dockerfile  railway.toml
backend/migrations/: 20260603000000_init_chat_schema.up.sql  20260604000000_update_embedding_dimension.up.sql
backend/src/: claims.rs  config.rs  db.rs  lib.rs  main.rs
backend/tests/: chat_endpoint_tests.rs  cors_tests.rs  secure_routes_tests.rs
docs/F01-landing-page-clerk-auth-ui/: plan.md  spec.md
docs/F02-signal-based-auth-state-route-guard/: plan.md  spec.md
docs/F03-protected-dashboard-component/: plan.md  spec.md
docs/F04-authenticated-http-client-interceptor/: plan.md  spec.md
docs/F05-axum-server-scaffolding-cors/: plan.md  spec.md
docs/F06-cryptographic-clerk-token-extractor/: plan.md  spec.md
docs/F07-secure-user-dashboard-api/: plan.md  spec.md
docs/F08-postgresql-pgvector-database-setup/: plan.md  spec.md
docs/F09-litellm-proxy-integration-upstream-gateway/: plan.md  spec.md
docs/F10-axum-ai-chat-embedding-endpoints/: plan.md  spec.md
frontend/: .env.example  .gitignore  Dockerfile  angular.json  nginx.conf.template  package-lock.json  package.json  proxy.conf.js
frontend/src/app/: app.component.spec.ts  app.config.ts  app.routes.ts
frontend/src/app/guards/: auth.guard.spec.ts  auth.guard.ts
frontend/src/app/interceptors/: auth.interceptor.spec.ts  auth.interceptor.ts
frontend/src/app/services/: auth.service.spec.ts  auth.service.ts  chat.service.spec.ts  (+5 more)
(+19 files in other folders)
