[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.43", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
dotenvy = "0.15.7"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
jsonwebtoken = "9.3.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros"] }
uuid = { version = "1.12.1", features = ["v4", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
tokio-util = { version = "0.7.12", features = ["codec", "io"] }
tokio-stream = "0.1.16"
futures = "0.3.31"


[dev-dependencies]

